Kubernetes: Fixed Helm config, added jre docker file and updated Readme file